--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<spring.version>5.2.0.RELEASE</spring.version>
 		<hibernate.version>5.2.11.Final</hibernate.version>
 		<hibernate.validator>5.4.1.Final</hibernate.validator>
-		<c3p0.version>0.9.5.2</c3p0.version>
+		<!-- <c3p0.version>0.9.5.2</c3p0.version> -->
 		<jstl.version>1.2.1</jstl.version>
 		<tld.version>1.1.2</tld.version>
 		<servlets.version>3.1.0</servlets.version>
@@ -49,11 +49,11 @@
 		</dependency>
 
 		<!-- c3p0 -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.mchange</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>${c3p0.version}</version>
-		</dependency>
+		</dependency> -->
 
 		<!-- Hibernate Validator -->
 		<dependency>
