--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,17 @@
 	<packaging>jar</packaging>
 	<properties>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
-		<spring.version>5.2.0.RELEASE</spring.version> 
-		<hibernate.version>5.2.11.Final</hibernate.version>
-		<hibernate.validator>5.4.1.Final</hibernate.validator>
-		<!-- <c3p0.version>0.9.5.2</c3p0.version> -->
-		<jstl.version>1.2.1</jstl.version>
+		<spring.version>6.0.6</spring.version>
+		<hibernate.version>6.1.7.Final</hibernate.version>
+		<hibernate.validator>8.0.0.Final</hibernate.validator>
+		<jstl.version>1.2.2</jstl.version>
 		<tld.version>1.1.2</tld.version>
-		<servlets.version>3.1.0</servlets.version>
-		<jsp.version>2.3.1</jsp.version>
+		<servlets.version>4.0.1</servlets.version>
+		<jsp.version>2.3.3</jsp.version>
 		<hsqldb.version>1.8.0.10</hsqldb.version>
-		<lombok.version>1.16.18</lombok.version>
-		<email.version>1.6.2</email.version>
+		<lombok.version>1.18.26</lombok.version>
+		<email.version>2.0.1</email.version>
+		<jakarta.annotations.version>2.1.1</jakarta.annotations.version>
 	</properties>
 	<dependencies>
 		<!-- Spring MVC Dependency -->
@@ -56,15 +56,17 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 
-		<!-- c3p0 -->
-		<!-- <dependency> <groupId>com.mchange</groupId> <artifactId>c3p0</artifactId> 
-			<version>${c3p0.version}</version> </dependency> -->
-
 		<!-- Hibernate Validator -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>${hibernate.validator}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>${jakarta.annotations.version}</version>
 		</dependency>
 
 		<!-- JSTL Dependency -->
@@ -105,7 +107,7 @@
 
 		<dependency>
 			<groupId>com.sun.mail</groupId>
-			<artifactId>javax.mail</artifactId>
+			<artifactId>jakarta.mail</artifactId>
 			<version>${email.version}</version>
 		</dependency>
 
@@ -129,12 +131,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
-			<!-- <plugin> <groupId>org.apache.tomcat.maven</groupId> <artifactId>tomcat7-maven-plugin</artifactId> 
-				<version>2.2</version> <configuration> <path>/</path> </configuration> </plugin> -->
 		</plugins>
 	</build>
 </project>
